# kvm-agent

./: .gitignore  AGENTS.md  CLAUDE.md  FINDINGS_2026-06-18_rootcause.md  FINDINGS_2026-06-20_uitars_Q8.md  HOLO_INTEGRATION_PLAN.md  Modelfile.uitars  PACKAGING_STATUS_2026-06-21.md  PLAN_2026-06-21_consolidation_and_optimization.md  PROJECT_STATE.md  SESSION_2026-06-21.md  agent_loop_holo.py  agent_server.py  boot.py  code.py  cua_agent.py  evocua_agent.py  executive.py  live_ctl.py  measure.py  pico_env.py  planner.py  pyproject.toml  r4_client.py  uitars_agent.py
.claude/: settings.json
_archive/: _calc_diag.py  _fix_test.py  _fkey_test.py  _hid_diag.py  _recheck.py  _sanity.py
_archive/docs_history/: FINDINGS_2026-06-19_flail_rootcause.md  FINDINGS_2026-06-20_uitars_q4.md  FINDINGS_2026-06-21_pico_wedge_fix.md  FINDINGS_2026-07-18_harness_review.md  FINDINGS_holo_bringup.md  FINDINGS_integration.md  FORMAT_NOTES_holo.md  PLAN_2026-07-22_phase2_subgoal_verification.md  PLAN_2026-07-23_gnome_session_reset.md  README_openwebui.md  REPORT_2026-07-22_harness_pattern_inventory.md  REPORT_2026-07-23_codebase_review.md  SESSION_2026-06-21_config_and_live_firefox.md  SESSION_2026-06-21_replan_feedback.md  SESSION_2026-06-22_closed_loop_and_hard_constraints.md  SESSION_2026-06-22_local_planner_b580.md  SESSION_2026-06-22_local_portfix_and_calc_benchmark.md  SESSION_2026-07-20_physical_target_move.md  (+5 more)
appliance/: README.md
appliance/pico_fw/: CMakeLists.txt  Makefile  README.md
appliance/pico_fw/src/: main.c  ph_cmds.c  ph_com.c  ph_com_spi.c  ph_com_uart.c  ph_outputs.c  ph_proto.h  ph_usb.c  ph_usb.h  ph_usb_mouse.c
docs/: DEMOS.md  EXTERNAL_DEPS.md  FINDINGS_2026-06-20_executive_architecture.md  FINDINGS_2026-06-20_uitars_FIX_live.md  FINDINGS_2026-07-18_harness_review.md  FINDINGS_integration.md  PLAN_2026-06-19_model_bakeoff.md  PLAN_2026-06-22_broadly_capable_roadmap.md  PLAN_2026-07-18_pi5_pico_appliance.md  PLAN_2026-07-20_physical_target_move.md  PLAN_2026-07-22_phase2_subgoal_verification.md  PLAN_2026-07-22_roadmap_alignment_slices.md  PLAN_2026-07-23_gnome_session_reset.md  PLAN_2026-07-23_model_harness_integration_testing.md  PLAN_2026-07-23_serving_matrix_enrollment.md  PROJECT_LAYOUT.md  README_evocua_mcp.md  REPORT_2026-07-19_problems.md  REPORT_2026-07-23_project_state_overview.md  REVIEW_2026-07-21_repo_review.md  ROADMAP.md  SESSION_2026-07-19_flyout_bug_vm_pivot_and_layout.md  SESSION_2026-07-19_holo_focus_bug_and_native_prompt_port.md  SESSION_2026-07-20_physical_target_move.md  SESSION_2026-07-22_first_complete_battery.md  SESSION_2026-07-22_model_seam_slice_c.md  SESSION_2026-07-22_roadmap_alignment.md  SESSION_2026-07-22_slice_b_firmware_hardening.md  SESSION_2026-07-23_action_observation_diagnostics.md  SESSION_2026-07-23_evidence_docs_d_d_readiness.md  SESSION_2026-07-23_gnome_session_reset.md  SESSION_2026-07-23_model_contract_smoke.md  SESSION_2026-07-23_model_harness_testing_baseline.md  SESSION_2026-07-23_phase2_slice_d_a_verifier.md  SESSION_2026-07-23_phase2_slice_d_b_rig_results.md  SESSION_2026-07-23_physical_calibration_smoke.md  SESSION_2026-07-23_post_action_settle.md  SESSION_2026-07-23_project_state_reconciliation.md  SESSION_2026-07-23_serving_command_tokenization.md  SESSION_2026-07-23_serving_contract.md  (+1 more)
kvm_agent/: __init__.py  config.py
probes/: _fmt3.py
tests/: conftest.py  test_agent_loop.py  test_appliance.py  test_battery.py  test_battery_metrics.py  test_boot_gate.py  test_capture_stall.py  test_clear_hid.py  test_closed_loop.py  test_docs_layout.py  test_frame_buffer.py  test_frame_diff.py  test_holo_messages.py  test_holo_parser.py  test_key_aliases.py  test_launch_routing.py  test_model_contract_smoke.py  test_model_seam.py  test_physical_calibration_smoke.py  test_pikvm_proto_retry.py  test_request_log.py  test_run_guard.py  test_run_log.py  test_scroll_op.py  test_serving.py  test_set_screen.py  test_settle.py  test_show_reasoning.py  test_target.py  test_uitars_adapter.py  test_verifier.py  test_verify_replay.py
tools/: battery.py  battery_metrics.py  battery_tasks_d_d_trigger.json  battery_tasks_gnome.json  battery_tasks_shakedown.json  check_layout.py  diag_clicks.py  eval_harness.py  hid_smoke.py  install_hooks.sh  isolate_default_browser.py  model_contract_smoke.py  operate.py  physical_calibration_smoke.py  physical_calibration_target.html  pico_serial_log.py  probe_first_open_reliability.py  probe_flyout_click_ab.py  probe_holo_note_uptake_at_depth.py  probe_holo_structured_output.py  probe_planner.py  probe_resolution_ab.py  probe_session_fresh_first_open.py  pull_pi5_logs.py  run_probe.py  run_tests.py  score_batch.py  selftest.py  serving_probe.py  shakedown_ab.py  show_reasoning.py  soak.py  verify_replay.py  wol.py
waa/: runner.py
(+169 files in other folders)
