[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kvm-agent"
version = "0.1.0"
description = "KVM-over-IP computer-use agent (HDMI capture + Pico 2 W USB-HID injector)."
requires-python = ">=3.10"
dependencies = [
  "opencv-python",
  "numpy",
  "pillow",
  "openai",
  "jinja2",
]

[project.optional-dependencies]
appliance = ["pyserial"]   # Pi 5 bridge side (pikvm_proto's UART link)
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["kvm_agent*"]

# NOTE: the live entry point agent_loop_holo.py is a repo-root script, not part of the
# package — `pip install .` delivers the library only. Known packaging gap (2026-07-20).
