[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kvm-agent"
version = "0.1.0"
description = "KVM-over-IP computer-use agent (HDMI capture + Pico 2 W USB-HID injector)."
requires-python = ">=3.10"
dependencies = [
  "opencv-python",
  "numpy",
  "pillow",
  "openai",
  "jinja2",
]

[project.optional-dependencies]
# tests/ runs as plain scripts (python tests/x.py) AND under pytest; pikvm_proto
# (appliance/pi5) imports pyserial at module top, which test_key_aliases pulls in.
test = [
  "pytest",
  "pyserial",
]

[tool.setuptools.packages.find]
include = ["kvm_agent*"]

[tool.pytest.ini_options]
# Project law forbids hidden cache/state directories. The canonical test runner also
# starts Python with -B so __pycache__ is not regenerated.
addopts = ["-p", "no:cacheprovider"]
norecursedirs = ["runs", "scratch", "_archive", "deps"]

# NOTE: the live entry point agent_loop_holo.py is a repo-root script, not part of the
# package — `pip install .` delivers the library only. Known packaging gap (2026-07-20).
